# pm

./: .gitignore  AGENTS.md  README.md
backend/: AGENTS.md  Dockerfile  pyproject.toml
backend/app/: ai.py  auth.py  board.py  chat.py  db.py  main.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
docs/: DATABASE.md  PLAN.md  REFACTOR_PLAN.md  REVIEW.md  db-schema.json
docs/superpowers/plans/: 2026-07-02-part9-ai-kanban-updates.md
docs/superpowers/specs/: 2026-07-02-part9-ai-kanban-updates-design.md
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/__tests__/: AddCardForm.test.tsx  Board.test.tsx  Card.test.tsx  ChatSidebar.test.tsx  Column.test.tsx  Login.test.tsx  api.test.ts  dnd.test.ts  page.test.tsx  store.test.ts
frontend/playwright/: kanban.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AddCardForm.tsx  Board.tsx  Card.tsx  ChatSidebar.tsx  Column.tsx  Login.tsx
frontend/src/lib/: api.ts  data.ts  dnd.ts  store.ts  types.ts
scripts/: AGENTS.md  start.bat
