[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
